Fix spacing

--- a/Components/Pages/Wallet.razor.scss
+++ b/Components/Pages/Wallet.razor.scss
@@ -123,6 +123,7 @@
             border: 1px solid #414141;
             padding: 10px;
             padding-left: 16px;
+            padding-right: 16px;
             border-radius: 40px;
             position: relative;
             color: #fff;
@@ -140,7 +141,7 @@
             }
 
             .transaction-amount {
-                margin-right: 10px;
+                margin-right: 30px;
                 width: 80px;
                 white-space: nowrap;
                 font-weight: 400;
